# voiced-chatgpt-tg-bot

./: pyproject.toml
bot/: main.py
bot/tools/: chat_gpt.py  text-to-speach.py
database/: init.sql
