[tool.poetry]
name = "voiced-chatgpt-tg-bot"
version = "0.1.0"
description = "simple tg bot which voiced answer on your questions by chatgpt"
authors = ["bogdan <telioko@tutanota.com>"]
readme = "README.md"

package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
pyTelegramBotAPI = "^4.16.1"
gTTS = "^2.5.1"
openai = "^1.16.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
